<resources>
    <string name="app_name">ITPrototypeZero</string>
    <string name="enterUserName">User Name:</string>
    <string name="enterPassWord">Password</string>
    <string name="submitButton">Submit</string>
    <string name="action_task_settings">Settings</string>
    <string name="action_remove_task">Remove Task</string>
    <string name="backdrop_title_taskList">Tasks Available</string>
    <string name="backdrop_subtitle_taskList">These are the Tasks Assigned to You</string>
    <string name="organistaion_id">Organistation</string>
    <string name="inventory_name">Inventory Name</string>
    <string name="location">Location</string>
    <string name="added_cost">Added Cost</string>
    <string name="remarks">Remarks</string>
    <string name="your_organistation">Your organistation</string>
    <string name="inventory_id">Inventory ID</string>
    <string name="location_spot">Location Spot</string>
    <string name="issue_description">Issue Description</string>
    <string name="completed_button">Completed</string>
    <string name="refuse_button">Refuse</string>
    <string name="amount">Amount</string>
    <string name="log_time">Log Time</string>
    <string name="task_no">Task #No.</string>
    <string name="refuseQuery">Specify the reason for refusal.</string>
</resources>
